# mcp-server-rag-web-browser-py

./: .env.example  .eslintrc  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: example_call_web_browser.ts  example_client_stdio.ts  example_client_stdio_chat.ts  index.ts  server.ts  sse.ts
src/mcp_server_rag_web_browser/: example_call_web_browser.py  example_client.py  server.py
